# chronostore

./: .bumpversion.cfg  Makefile  README.md  benchmark.py  conftest.py  pyproject.toml
.github/workflows/: release.yml
chronostore/: __init__.py  engine.py  schema.py
chronostore/backend/: __init__.py  base.py  lmdb.py
chronostore/backend/flatfile/: flatfile.py  storage.py  writer.py
chronostore/core/: __init__.py  partitioner.py  reader.py  schema.py  storage.py
notebooks/: 1_million_rows.ipynb  financial_tick_data.ipynb  iot_sensor.ipynb
tests/: test_engine.py  test_partitioner.py  test_reader.py  test_storage.py  test_writer.py
tests/flatfile/: test_partitioner.py  test_storage.py  test_writer.py
